# Finance-tracker

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/versions/: 1234567890_create_users_table.py
app/: main.py
app/api/endpoints/: analytics.py  auth.py  transaction.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/db/alembic/: env.py
